# ocaml_mini_shell

./: LICENSE.md  README.md  dune-project  ocaml_mini_shell.opam
lib/: dune
