(lang dune 3.16)

(name ocaml_mini_shell)

(generate_opam_files true)

(source
 (github hallmason17/ocaml_mini_shell))

(authors "Mason Hall")

(maintainers "Mason Hall")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_mini_shell)
 (description "Mini shell to execute commands with args written in Ocaml")
 (depends ocaml dune))


; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
